--- a/members.html
+++ b/members.html
@@ -1024,6 +1024,9 @@
             fetch('https://script.google.com/macros/s/AKfycbz2Dcq28o3NEUTnDBklm0QuTMONwUqIXAuOt0_v9NnmjctfAeS0YutIl9gsIV8ZwJtm/exec', {
                 method: 'POST',
                 body: JSON.stringify(formData),
+                mode: 'cors', // This enables CORS properly
+                cache: 'no-cache',
+                credentials: 'omit', 
                 headers: {
                     'Content-Type': 'application/json'
                 }
