--- a/receipt.html
+++ b/receipt.html
@@ -463,7 +463,7 @@
                     <i class="fas fa-bars"></i>
                 </div>
                 <div class="logo-container">
-                    <img src="C:\BackUps\Orange\Trust Project\Hanumanji.png" alt="Logo" class="logo-img">
+                    <img src="Hanumanji.png" alt="Logo" class="logo-img">
                     <div class="logo-text">
                         <div class="main-heading">जय हनुमान चॅरिटेबल ट्रस्ट</div>
                         <div class="subheading">म्हसाळा, वर्धा, नोंदणी क्र. - ई - ५२९/०१७ (वर्धा)</div>
