--- a/members.html
+++ b/members.html
@@ -556,9 +556,9 @@
                     <thead>
                         <tr>
                             <th>ID</th>
-                            <th>Name</th>
-                            <th>Mobile</th>
-                            <th>Role</th>
+                            <th>Member Name</th>
+                            <th>Member Mobile</th>
+                            <th>Member Role</th>
                             <th class="text-end">Actions</th>
                         </tr>
                     </thead>
