--- a/expense.html
+++ b/expense.html
@@ -9,6 +9,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <!-- Example for Inter -->
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+
     <!-- Custom CSS -->
     <link rel="stylesheet" href="expense.css">
 </head>
@@ -124,11 +127,8 @@
     <footer class="footer">
         <div class="container-fluid">
             <div class="footer-links">
-                <a href="#" class="footer-link">Privacy Policy</a>
-                <a href="#" class="footer-link">Terms of Service</a>
-                <a href="#" class="footer-link">Contact Us</a>
             </div>
-            <p class="copyright">&copy; 2023 OrangeDash. All rights reserved.</p>
+            <p class="copyright">&copy; जय हनुमान चॅरिटेबल ट्रस्ट </p>
         </div>
     </footer>
 
