--- a/expense.html
+++ b/expense.html
@@ -91,11 +91,11 @@
     <main class="main-content" id="mainContent">
         <!-- Page Header -->
         <div class="d-flex justify-content-between align-items-center mb-4 flex-column flex-sm-row">
-            <h1 class="page-title">Receipts</h1>
+            <h1 class="page-title">Expenses</h1>
 
             <button id="btn-add-receipt"
-                class="btn btn-primary d-flex align-items-center gap-2 rounded-pill px-3 py-2 shadow-sm"
-                style="font-weight: 500;">
+                class="btn btn-primary d-flex align-items-center gap-2"
+                style="font-weight: 500; font-size: 10px;">
                 <i class="fas fa-plus"></i>
                 <span>Add New Expense</span>
             </button>
@@ -132,52 +132,71 @@
         </div>
     </footer>
 
-    <!-- Receipt Modal -->
-    <div class="modal fade" id="expense-modal" tabindex="-1" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="modal-title">Add New Expense</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <form id="memberForm">
-                        <div class="mb-3">
-                            <label for="expense-date" class="form-label">Expense Date ( खर्च दिनांक )</label>
-                            <input type="date" class="form-control" id="expense-date" required>
+    <!-- Expense Modal -->
+<div class="modal fade" id="expense-modal" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-lg">
+        <div class="modal-content shadow-lg">
+            <div class="modal-header bg-light border-bottom">
+                <h5 class="modal-title" id="modal-title">Add New Expense</h5>
+                <button type="button" class="btn-close" id="btn-cancel" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body px-4 py-3">
+                <form id="memberForm">
+                    <div class="row g-3">
+                        <!-- Expense Date -->
+                        <div class="col-md-6 position-relative">
+                            <label for="expense-date" class="form-label fw-semibold">
+                                <i class="bi bi-calendar-date me-1 text-primary" data-bs-toggle="tooltip" title="Select the date of the expense"></i>
+                                Expense Date ( खर्च दिनांक )
+                            </label>
+                            <input type="date" class="form-control shadow-sm" id="expense-date" required>
                         </div>
 
-                        <div class="mb-3">
-                            <label for="expense-amount" class="form-label">Expense Amount ( खर्च रक्कम )</label>
-                            <input type="number" class="form-control" id="expense-amount" required>
+                        <!-- Expense Amount -->
+                        <div class="col-md-6 position-relative">
+                            <label for="expense-amount" class="form-label fw-semibold">
+                                <i class="bi bi-currency-rupee me-1 text-success" data-bs-toggle="tooltip" title="Enter the total expense amount"></i>
+                                Expense Amount ( खर्च रक्कम )
+                            </label>
+                            <input type="number" class="form-control shadow-sm" id="expense-amount" required>
                         </div>
 
-                        <div class="mb-3">
-                            <label for="expense-member-name" class="form-label">Name ( नाम )</label>
-                            <input type="text" class="form-control" id="expense-member-name" list="members-list"
+                        <!-- Member Name -->
+                        <div class="col-12 position-relative">
+                            <label for="expense-member-name" class="form-label fw-semibold">
+                                <i class="bi bi-person-circle me-1 text-info" data-bs-toggle="tooltip" title="Enter or search for the member's name"></i>
+                                Name ( नाव )
+                            </label>
+                            <input type="text" class="form-control shadow-sm" id="expense-member-name" list="members-list"
                                 autocomplete="off" required placeholder="Start typing to search members...">
                             <datalist id="members-list">
-                                <!-- Options will be loaded dynamically -->
+                                <!-- Options loaded dynamically -->
                             </datalist>
+                            <input type="hidden" id="expense-member-id" value="">
                         </div>
-                        <input type="hidden" id="expense-member-id" value="">
 
-                        <div class="mb-3">
-                            <label for="expense-note" class="form-label">Expense Note ( खर्चाची नोंद )</label>
-                            <input type="text-area" class="form-control" id="expense-note" required>
+                        <!-- Expense Note -->
+                        <div class="col-12 position-relative">
+                            <label for="expense-note" class="form-label fw-semibold">
+                                <i class="bi bi-journal-text me-1 text-warning" data-bs-toggle="tooltip" title="Add a short note or purpose of the expense"></i>
+                                Expense Note ( खर्चाची नोंद )
+                            </label>
+                            <textarea class="form-control shadow-sm" id="expense-note" rows="3" required></textarea>
                         </div>
 
                         <input type="hidden" id="edit-expense-id" value="">
+                    </div>
 
-                        <div class="d-flex justify-content-end gap-2 mt-4">
-                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                            <button type="button" class="btn btn-primary" id="btn-save">Save Expense</button>
-                        </div>
-                    </form>
-                </div>
+                    <div class="d-flex justify-content-end gap-2 mt-4">
+                        <button type="button" class="btn btn-outline-secondary px-4" style="font-size: 12px;height: 30px;" data-bs-dismiss="modal" id="btn-cancel">Cancel</button>
+                        <button type="button" class="btn btn-primary px-4" style="font-size: 12px;height: 30px;" id="btn-save">Save Expense</button>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
+</div>
+
 
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
